--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookstoredb
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
+
+# Show SQL
+spring.jpa.show-sql=true
+
+# Format SQL
+spring.jpa.properties.hibernate.format_sql=true
+
+# Use this for more detailed logging
+logging.level.org.hibernate.type.descriptor.sql=trace
