Docker and data to load the db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstoredb
+spring.datasource.url=jdbc:postgresql://db:5432/bookstoredb
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework.security=DEBUG
+spring.jpa.defer-datasource-initialization=true
+management.endpoints.web.exposure.include=*
+spring.sql.init.mode=always
 
 # Show SQL
 spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Format SQL
 spring.jpa.properties.hibernate.format_sql=true
-
-# Use this for more detailed logging
-logging.level.org.hibernate.type.descriptor.sql=trace
